--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -53,7 +53,7 @@
                 </div>
             </a> --}}
             <div class="header-title">
-                MyArxiv
+                YWL's Arxiv
             </div>
         </div>
 
